--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,20 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 16px;
+}
+
+.left-side {
+  display: flex;
+  margin-right: auto;
+  flex: 0 0 auto;
+}
+
+.right-side {
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
 
 .profile-image {
@@ -20,6 +34,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex: 0 0 auto
 }
 
 .logo {
@@ -45,4 +60,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  
 }
