--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,14 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 16px;
+  padding: 16px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
 }
 
 .icon {
@@ -33,8 +41,22 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 0 0 auto
 }
 
+.header {
+  font-size: large;
+  font-weight: 700;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.info-action {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
